@@ -1,5 +1,7 @@
 2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkImgGIF.c: cast calls to blockOut
+
 	* win/Makefile.in: place TCL_BIN_DIR first in PATH for targets to
 	get Tcl built dll first.
 	Add tkWinTest.obj to tk84.dll to handle some needed test functions
